--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
+
+    dataBinding{
+        enabled true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,12 +26,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.0'
     testCompile 'junit:junit:4.12'
     compile 'com.hangox:xLog:1.0'
-    compile project(":polygonimageviewlibrary")
+    compile project(':polygonimageviewlibrary')
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.github.QuadFlask:colorpicker:0.0.10'
 }
